--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-cayman
-title: Test title
-description:  Test description
+title: Welcome to YUN-TING LAI’s collections
+description:  linkedin.com/in/lisa4930007
 github:
   is_project_page: false
