--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-cayman
-title: Welcome to YUN-TING LAI’s collections
-description:  linkedin.com/in/lisa4930007
+title: YUN-TING LAI’s collections
+description:  
 github:
   is_project_page: false
