--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,10 @@ title: YUN-TING LAI’s collections
 description:  
 github:
   is_project_page: false
+
+
+minima:
+  social_links:
+    github: lisa4930007
+    linkedin: lisa4930007
+    
