--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@ title: YUN-TING LAI’s collections
 description:  
 github:
   is_project_page: true
-#   another_url: https://www.linkedin.com/in/lisa4930007/
+  another_url: https://www.linkedin.com/in/lisa4930007/
 
 
