--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,8 @@ title: YUN-TING LAI’s collections
 description:  
 github:
   is_project_page: true
+show_downloads:  
   zip_url: http://example.com/download.zip
-  another_url: https://www.linkedin.com/in/lisa4930007/
+  tar_url: https://www.linkedin.com/in/lisa4930007/
 
 
