--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,6 @@ theme: jekyll-theme-cayman
 title: YUN-TING LAI’s collections
 description:  
 github:
-  is_project_page: true
-show_downloads:  
-  zip_url: http://example.com/download.zip
-  tar_url: https://www.linkedin.com/in/lisa4930007/
+  is_project_page: false
 
 
