--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: YUN-TING LAI’s collections
-description:  
+description: collections
 github:
   is_project_page: false
 theme: jekyll-theme-cayman
