--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
+title: lisa
 github:
   is_project_page: false
-theme: jekyll-theme-cayman
+
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme
