--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,5 @@
-title: lisa
+title: YUN-TING LAI’s collections
+description:
 github:
   is_project_page: false
-
-remote_theme: pages-themes/cayman@v0.2.0
-plugins:
-- jekyll-remote-theme
+theme: jekyll-theme-cayman
